--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -40,9 +40,23 @@
 							<li class='nav-item'>
 								<a class='nav-link' href='/profile'>Mi perfil</a>
 							</li>
+
+							{{#if premium}}
+								<li class='nav-item'>
+									<a class='nav-link' href='/new-product'>Nuevo producto</a>
+								</li>
+							{{/if}}
+
+							{{#if notAdmin}}
+								<li>
+									<a class='nav-link' href='/cart'>Carrito</a>
+								</li>
+							{{/if}}
+
 							<li class='nav-item'>
 								<a class='nav-link' href='/logout'>Logout</a>
 							</li>
+
 						{{else}}
 							<li class='nav-item'>
 								<a class='nav-link' href='/login'>Login</a>
@@ -53,7 +67,7 @@
 			</div>
 		</nav>
 
-		<div class="mt-3 mb-5">
+		<div class='mt-3 mb-5'>
 			{{{body}}}
 		</div>
 
