--- a/src/views/singleProduct.handlebars
+++ b/src/views/singleProduct.handlebars
@@ -1,12 +1,13 @@
-<div class="container">
+<div class='container'>
 	<h2>{{product.title}}</h2>
-    <p>{{product.description}}</p>
-    <p>Precio: {{product.price}}</p>
-    <button type="button" class="addToCartBtn" product={{product}}>Agregar al carrito</button>
-    
-    <a href='/products'>Volver a todos los productos</a>
+	<p>{{product.description}}</p>
+	<p>Precio: {{product.price}}</p>
+	{{#if auth}}
+		{{#if notAdmin}}
+			<button type='button' class='addToCartBtn' productID={{product._id}} cartID={{cartID}}>Agregar al carrito</button>
+		{{/if}}
+	{{/if}}
+	<a href='/products'>Volver a todos los productos</a>
 </div>
 
-
-<script src='/socket.io/socket.io.js'></script>
-<script src="../js/addToCart.js"></script>
+<script src='../js/addToCart.js'></script>
