Panel de administración de usuarios + /api/tickets

--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -51,6 +51,10 @@
 								<li>
 									<a class='nav-link' href='/cart'>Carrito</a>
 								</li>
+							{{else}}
+								<li>
+									<a class='nav-link' href='/users'>Administrar usuarios</a>
+								</li>
 							{{/if}}
 
 							<li class='nav-item'>
